compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__for_type_alias.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\npub type Wibble = Result(\n  String,\n  String\n)\n"
snapshot_kind: text
---
pub type Wibble = Result(
|  String,
  String
)


----- Completion content -----
