compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__importable_adds_extra_new_line_if_import_exists_below_other_definitions.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\nimport dep2\n"
snapshot_kind: text
---
|
import dep2


----- Completion content -----
