compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__importable_adds_extra_new_line_if_no_imports.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: ""
snapshot_kind: text
---
----- Completion content -----
