compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__importable_module_function.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\n"
snapshot_kind: text
---
|


----- Completion content -----
