compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__importable_module_function_with_existing_imports.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\n//// Some module comments\n// Some other whitespace\n\nimport dep2\n"
snapshot_kind: text
---
|
//// Some module comments
// Some other whitespace

import dep2


----- Completion content -----
