compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__importable_type_from_deep_module.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\n\npub fn wibble(\n  _: String,\n) -> Nil {\n  Nil\n}\n"
snapshot_kind: text
---
pub fn wibble(
|  _: String,
) -> Nil {
  Nil
}


----- Completion content -----
