compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__importable_type_with_existing_imports.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\n//// Some module comments\n// Some other whitespace\n\nimport dep2\n\npub fn wibble(\n  _: String,\n) -> Nil {\n  Nil\n}\n"
snapshot_kind: text
---
//// Some module comments
// Some other whitespace

import dep2

pub fn wibble(
|  _: String,
) -> Nil {
  Nil
}


----- Completion content -----
