compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__importable_type_with_existing_imports_at_top.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "import dep2\n\npub fn wibble(\n  _: String,\n) -> Nil {\n  Nil\n}\n"
snapshot_kind: text
---
import dep2

pub fn wibble(
|  _: String,
) -> Nil {
  Nil
}


----- Completion content -----
